--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Button -->
     <div class="button-container">
-        <a href="https://sites.google.com/sutton-family.com/dog-gone/qr">Create your Dog-Gone QR Code</a>
+        <a href="https://blimboy.github.io/Dog-Gone/qr">Create your Dog-Gone QR Code</a>
     </div><br>
     <div class="container">
         <div class="text">
@@ -107,4 +107,5 @@
         </div>
 
 </body>
+
 </html>
