--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <!-- Button -->
     <div class="button-container">
-        <a href="https://blimboy.github.io/Dog-Gone/QR.html">Create your Dog-Gone QR Code</a>
+        <a href="https://blimboy.github.io/Dog-Gone/qr.html">Create your Dog-Gone QR Code</a>
     </div><br>
     <div class="container">
         <div class="text">
@@ -109,4 +109,5 @@
 </body>
 
 </html>
+
 
