--- a/index2.html
+++ b/index2.html
@@ -40,7 +40,7 @@
                     const latitude = position.coords.latitude;
                     const longitude = position.coords.longitude;
                     const googleMapsUrl = `https://www.google.com/maps/@${latitude},${longitude},14z?entry=ttu`;
-                    const smsBody = `I've just found ${name}, Here's my current location:\n${googleMapsUrl}`;
+                    const smsBody = `Hi, I've found you dog ${name}, Here's my current location:\n${googleMapsUrl}`;
                     const encodedSmsBody = encodeURIComponent(smsBody);
 
                     // Open the SMS app with the pre-filled message
@@ -87,4 +87,5 @@
         });
     </script>
 </body>
+
 </html>
