--- a/index.html
+++ b/index.html
@@ -5,50 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout with Text and Images</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            margin: 10px; /* Reduce overall container margin */
-        }
-        .text, .image {
-            flex: 1;
-            padding: 10px; /* Reduce padding within text and image sections */
-        }
-        .text {
-            flex: 1 1 50%;
-            text-align: justify; /* Justify the text */
-        }
-        .image {
-            flex: 1 1 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .image img {
-            max-width: 100%;
-            height: auto;
-        }
-        .button-container {
-            text-align: center;
-            margin: 10px; /* Reduce button container margin */
-        }
-        .button-container a {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .button-container a:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        font-size: 16px; /* Base font size for body text */
+    }
+
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 10px; /* Reduce overall container margin */
+    }
+
+    .text, .image {
+        flex: 1;
+        padding: 10px; /* Reduce padding within text and image sections */
+    }
+
+    .text {
+        flex: 1 1 50%;
+        text-align: justify; /* Justify the text */
+        font-size: 18px; /* Main text size (adjust as needed) */
+    }
+
+    .image {
+        flex: 1 1 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .image img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .button-container {
+        text-align: center;
+        margin: 10px; /* Reduce button container margin */
+    }
+
+    .button-container a {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007BFF;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px; /* Button text size (adjust as needed) */
+    }
+
+    .button-container a:hover {
+        background-color: #0056b3;
+    }
+</style>
+
 </head>
 <body>
 
@@ -109,5 +121,6 @@
 </body>
 
 </html>
+
 
 
