--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     .text {
         flex: 1 1 50%;
-        text-align: justify; /* Justify the text */
-        font-size: 18px; /* Main text size (adjust as needed) */
+        text-align: centre; /* Justify the text */
+        font-size: 30px; /* Main text size (adjust as needed) */
     }
 
     .image {
@@ -121,6 +121,7 @@
 </body>
 
 </html>
+
 
 
 
