--- a/index.html
+++ b/index.html
@@ -115,12 +115,13 @@
     </div>
 
     <div class="button-container">
-            <a href="https://pay.collctiv.com/dog-gone-51427" target="_blank">Click here to donate £1</a>
+            <a href="https://pay.collctiv.com/dog-gone-51427" target="_blank">If you're feeling generous, please click here to donate</a>
         </div>
 
 </body>
 
 </html>
+
 
 
 
