--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     .text {
         flex: 1 1 50%;
-        text-align: centre; /* Justify the text */
+        text-align: justify; /* Justify the text */
         font-size: 30px; /* Main text size (adjust as needed) */
     }
 
@@ -121,6 +121,7 @@
 </body>
 
 </html>
+
 
 
 
