--- a/index.html
+++ b/index.html
@@ -115,12 +115,15 @@
     </div>
 
     <div class="button-container">
-            <a href="https://pay.collctiv.com/dog-gone-51427" target="_blank">If you're feeling generous, please click here to donate</a></p></p>
+            <a href="https://pay.collctiv.com/dog-gone-51427" target="_blank">If you're feeling generous, please click here to donate</a>
         </div>
-
-</body>
+    <div class="container">
+        <div class="text"> </p></p>
+    </div>
+    </body>
 
 </html>
+
 
 
 
