--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
 
     .text {
         flex: 1 1 50%;
-        text-align: justify; /* Justify the text */
+        text-align: centre; /* Justify the text */
         font-size: 20px; /* Main text size (adjust as needed) */
     }
 
@@ -123,6 +123,7 @@
     </body>
 
 </html>
+
 
 
 
