--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@ e<!DOCTYPE html>
     <div class="container">
         <div class="text">
             <h2>What is Dog-Gone?</h2> 
-            <p>It all started when I was looking for a tag for our dogs that would allow us to be alerted if they were found.</p> 
-            <p>It turns out there are quite a few already on the market, But it seemed that they all wanted my details, more than they wanted my dogs!
-            They all wanted me to sign up to an app or pay them a subscription, which I guess is great if you're into that kind of thing, but I just want to be contacted if someone finds my dog!</p>
+            <p>It all started when I was looking for an ID Tag for our dogs that would allow us to be alerted if they were found.</p> 
+            <p>Turns out there are quite a few already on the market, But it seemed that they were all more interested in  my details, than my dogs!</p>
+            <p>They all wanted me to pay them a subscription or sign up to an app, which is great if you're into that kind of thing, but I just want to be contacted if someone finds my dog!</p>
             <p>So, I decided to do it myself and being a nice person, I thought I'd share it for free.</p>
         </div>
         <div class="image">
@@ -123,6 +123,7 @@ e<!DOCTYPE html>
     </body>
 
 </html>
+
 
 
 
