--- a/qr.html
+++ b/qr.html
@@ -61,7 +61,7 @@
     <form id="qr-form">
         <label for="phone">Phone Number:</label>
         <input type="text" id="phone" required>
-        <label for="phone1">Alternative Phone Number:</label>
+        <label for="phone1">2nd Phone Number (Optional):</label>
         <input type="text" id="phone1">
         <label for="dogname">Dog Name:</label>
         <input type="text" id="dogname" required>
