--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -124,6 +124,7 @@ e<!DOCTYPE html>
     </body>
 
 </html>
+
 
 
 
