--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </div>
         <div class="text">
             <h2>What is Dog-Gone?</h2> 
-            <p>It all started when I was looking for an ID Tag for our dogs that would allow us to be alerted if they were found.</p> 
+            <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be alerted if they were found.</p> 
+            <p></p>
             <p>Turns out there are quite a few already on the market, But it seemed that they were all more interested in my personal details than my dogs!</p>
             <p>They either wanted me to pay them a subscription or sign up to an app, which is fine if you're into that kind of thing, but I just want to be contacted if someone finds my dog!</p>
             <p>So, I decided to do it myself and being a nice person, I thought I'd share it for free.</p>
@@ -124,6 +125,7 @@
     </body>
 
 </html>
+
 
 
 
