--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <div class="text">
             <h2>The Dog-Gone QR Code</h2>
             <p>The Dog-Gone QR code can be engraved into a metal tag to be attached to your dogs collar or harness, when it's scanned on a mobile phone it will open a web page containing;</p>
-            <p>- Your dogs name</p>
-            <p>- Your phone number</p>
-            <p>- Second phone number (Optional)</p>
+            <p>   - Your dogs name</p>
+            <p>   - Your phone number</p>
+            <p>   - Second phone number (Optional)</p>
             <p></p>
             <p>The finder can then call you directly or they can click a button on the page to send you a text message with their current GPS location details.</p>
         </div>
@@ -107,7 +107,7 @@
 
     <!-- Button -->
     <div class="button-container">
-        <a href="https://blimboy.github.io/Dog-Gone/qr.html">Create your Dog-Gone QR Code</a>
+        <a href="https://blimboy.github.io/Dog-Gone/qr.html">Create your Dog-Gone QR</a>
     </div><br>
     <div class="container">
         <div class="text">
@@ -124,6 +124,7 @@
     </body>
 
 </html>
+
 
 
 
