--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
     <div class="button-container">
-            <a href="https://pay.collctiv.com/dog-gone-51427" target="_blank">Please click here to if you'd like to donate</a>
+            <a href="https://pay.collctiv.com/dog-gone-51427" target="_blank">Please click here to donate</a>
         </div>
     <div class="container">
         <div class="text"> </p></p>
@@ -124,6 +124,7 @@
     </body>
 
 </html>
+
 
 
 
