--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout with Text and Images</title>
+    <title>Dog-Gone</title>
     <style>
     body {
         font-family: Arial, sans-serif;
@@ -124,6 +124,7 @@
     </body>
 
 </html>
+
 
 
 
