--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Location via SMS</title>
+    <title>Send Location via SMS (2)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -101,4 +101,5 @@
 </body>
 
 </html>
+
 
