--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Location via SMS</title>
+    <title>Send Location via SMS (1)</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -100,4 +100,5 @@
     </script>
 </body>
 </html>
+
 
