--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
             <p>Your details will only ever appear on the screen of the person who scans your tag. They're not captured by us, or shared in any way.</p>
             <p>You can order a tag, either by using the link provided on the QR code page, or send it to any local engraving service to make a tag of your choice.</p>
         </div>
+        <div class="image">
+            <img src="https://blimboy.github.io/Dog-Gone/lost-dog.jpg" alt="Image on the right">
+        </div>
     </div>
 
     <!-- Button -->
@@ -135,6 +138,7 @@
     </body>
 
 </html>
+
 
 
 
