--- a/index.html
+++ b/index.html
@@ -111,14 +111,22 @@
             <h2>How to use the QR Code?</h2>
             <p>It's simple, you just download the QR code image and use it to create your tag.  The only details you'll be asked to enter are;</p>
             <p>Your dogs name and your contact number(s).</p>
-            <p>Your details will only ever appear on the screen of the person who scans your tag. They're not captured by us, or shared in any way.</p>
-            <p>You can order a tag, either by using the link provided on the QR code page, or send it to any local engraving service to make a tag of your choice.</p>
         </div>
+    </div>
+    
+    <!-- Fourth Row -->
+    <div class="container">
         <div class="image">
             <img src="https://blimboy.github.io/Dog-Gone/lost-dog.jpg" alt="Image on the right">
         </div>
+        <div class="text">
+            <h2>How it works</h2>
+            <p>When the QR Tag is scanned, the following screen will be displayed on the finders device, They can then choose to call the number displayed or click the button to send an SMS with their GPS location.</p>
+            <p>Your details will only ever appear on the screen of the person who scans your tag. They're not captured by us, or shared in any way.</p>
+            <p>You can order a tag, either by using the link provided on the QR code page, or send it to any local engraving service to make a tag of your choice.</p>
+        </div>
     </div>
-
+    
     <!-- Button -->
     <div class="button-container">
         <a href="https://blimboy.github.io/Dog-Gone/qr.html">Create your Dog-Gone QR</a>
@@ -138,6 +146,7 @@
     </body>
 
 </html>
+
 
 
 
