--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <p>When the QR Tag is scanned, the following screen will be displayed on the finders device, They can then choose to call the number displayed or click the button to send an SMS with their GPS location.</p>
         </div>
         <div class="image">
-            <img src="https://blimboy.github.io/Dog-Gone/lost-dog.jpg" alt="Image on the right">
+            <img src="https://blimboy.github.io/Dog-Gone/Screenshot_20251104_181149_com_android_chrome_ChromeTabbedActivity.jpg" alt="Image on the right">
         </div>
         <div class="text">
             <p>Your details will only ever appear on the screen of the person who scans your tag. They're not captured by us, or shared in any way.</p>
@@ -148,6 +148,7 @@
     </body>
 
 </html>
+
 
 
 
