--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   gtag('js', new Date());
 
   gtag('config', 'G-28Z9QX8QEG');
+
+
+   
 </script>
     
     <meta charset="UTF-8">
@@ -24,6 +27,7 @@
     }
 
     .container {
+        border: 5px outset red;
         display: flex;
         flex-wrap: wrap;
         margin: 10px; /* Reduce overall container margin */
@@ -70,7 +74,7 @@
     .button-container a:hover {
         background-color: #0056b3;
     }
-</style>
+    </style>
 
 </head>
 <body>
@@ -148,6 +152,7 @@
     </body>
 
 </html>
+
 
 
 
