--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     }
 
     .image img {
+        border: 5px outset black;
         max-width: 100%;
         height: auto;
     }
@@ -152,6 +153,7 @@
     </body>
 
 </html>
+
 
 
 
