--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     }
 
     .container {
-        border: 5px outset red;
         display: flex;
         flex-wrap: wrap;
         margin: 10px; /* Reduce overall container margin */
@@ -86,7 +85,7 @@
             <img src="https://blimboy.github.io/Dog-Gone/lost-dog.jpg" alt="Image on the right">
         </div>
         <div class="text">
-            <h2>So what is Dog-Gone?</h2> 
+            <h2>What is Dog-Gone?</h2> 
             <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be alerted if they were found.</p> 
             <p>Turns out there are quite a few already on the market, But it seemed that they were all more interested in my personal details than my dogs!</p>
             <p>They either wanted me to pay them a subscription or sign up to an app, which is fine if you're into that kind of thing, but I just want to be contacted if someone finds my dog!</p>
@@ -153,6 +152,7 @@
     </body>
 
 </html>
+
 
 
 
