--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
 
     .image img {
-        border: 5px outset black;
+        border: 2px outset black;
         max-width: 100%;
         height: auto;
     }
@@ -86,10 +86,9 @@
         </div>
         <div class="text">
             <h2>What is Dog-Gone?</h2> 
-            <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be alerted if they were found.</p> 
-            <p>Turns out there are quite a few already on the market, But it seemed that they were all more interested in my personal details than my dogs!</p>
-            <p>They either wanted me to pay them a subscription or sign up to an app, which is fine if you're into that kind of thing, but I just want to be contacted if someone finds my dog!</p>
-            <p>So, I decided to do it myself and being a nice person, I thought I'd share it for free.</p>
+            <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be contacted if they were found.</p> 
+            <p>There are quite a few already on the market, but it seemed that they were all more interested in my details than my dogs!
+            They either wanted me to pay them a subscription or to sign up to their app. I just want to be contacted if someone finds my dog!So, I decided to do it myself.</p>
         </div>
     </div>
 
@@ -152,6 +151,7 @@
     </body>
 
 </html>
+
 
 
 
