--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             <h2>What is Dog-Gone?</h2> 
             <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be contacted if they were found.</p> 
             <p>There are quite a few already on the market, but it seemed that they were all more interested in my details than my dogs!
-            They either wanted me to pay them a subscription or to sign up to their app. I just want to be contacted if someone finds my dog!So, I decided to do it myself.</p>
+            They wanted me to pay them a subscription or to sign up to their app.</p> 
+            <p>I just want to be contacted if someone finds my dog! So I decided to do it myself.</p>
         </div>
     </div>
 
@@ -151,6 +152,7 @@
     </body>
 
 </html>
+
 
 
 
