--- a/index.html
+++ b/index.html
@@ -88,32 +88,34 @@
             <h2>What is Dog-Gone?</h2> 
             <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be contacted if they were found.</p> 
             <p>There are quite a few already on the market, but it seemed that they were all more interested in my details than my dogs!
-            They wanted me to pay them a subscription or to sign up to their app.</p> 
-            <p>I just want to be contacted if someone finds my dog! So I decided to do it myself.</p>
+            They all wanted me to pay them a subscription or to sign up to their app.</p> 
+            <p>I just want to be contacted if someone finds my dog!</p>
         </div>
     </div>
 
     <!-- Second Row -->
     <div class="container">
         <div class="text">
-            <h2>The Dog-Gone QR Code</h2>
-            <p>The Dog-Gone QR code can be engraved into a metal tag to be attached to your dogs collar or harness, when it's scanned on a mobile phone it will open a web page containing;</p>
+            <h2>Dog-Gone QR Code</h2>
+            <p>The Dog-Gone QR code image can be engraved into a metal tag to be attached to your dogs collar or harness.</p> 
+            <p>When the tag is scanned on a mobile phone it will open a web page containing;</p>
             <p>   - Your dogs name</p>
             <p>   - Your phone number</p>
             <p>   - Second phone number (Optional)</p>
             <p></p>
-            <p>The finder can then call you directly or they can click a button on the page to send you a text message with their current GPS location details.</p>
+            <p>When the QR Tag is scanned, the following screen will be displayed on the finders device, They can then choose to call the number displayed or click the button to send an SMS with their GPS location.</p>
         </div>
         <div class="image">
-            <img src="https://sheffieldengraving.com/cdn/shop/products/A8_5dc76f22-8820-43e1-911a-d26a59817d99.jpg?v=1667143730&width=360" alt="Image on the left">
+            <img src="https://blimboy.github.io/Dog-Gone/Screenshot_20251104_181149_com_android_chrome_ChromeTabbedActivity.jpg" alt="Image on the right">
         </div>
     </div>
 
     <!-- Third Row -->
     <div class="container">
         <div class="text">
-            <h2>How to use the QR Code?</h2>
-            <p>It's simple, you just download the QR code image and use it to create your tag.  The only details you'll be asked to enter are;</p>
+            <h2>Using the QR Code?</h2>
+            <p>It's simple, you can download the QR code image yourself and use it to create your tag, or you can order a tag from our Etsy store using the link provided on the QR page.</p>
+            <p>The only details you'll be asked to enter are;</p>
             <p>Your dogs name and your contact number(s).</p>
         </div>
     </div>
@@ -123,13 +125,7 @@
         <div class="text">
             <h2>How it works</h2>
             <p>When the QR Tag is scanned, the following screen will be displayed on the finders device, They can then choose to call the number displayed or click the button to send an SMS with their GPS location.</p>
-        </div>
-        <div class="image">
-            <img src="https://blimboy.github.io/Dog-Gone/Screenshot_20251104_181149_com_android_chrome_ChromeTabbedActivity.jpg" alt="Image on the right">
-        </div>
-        <div class="text">
             <p>Your details will only ever appear on the screen of the person who scans your tag. They're not captured by us, or shared in any way.</p>
-            <p>You can order a tag, either by using the link provided on the QR code page, or send it to any local engraving service to make a tag of your choice.</p>
         </div>
     </div>
     
@@ -152,6 +148,7 @@
     </body>
 
 </html>
+
 
 
 
