--- a/index.html
+++ b/index.html
@@ -97,16 +97,16 @@
     <div class="container">
         <div class="text">
             <h2>Dog-Gone QR Code</h2>
-            <p>The Dog-Gone QR code image can be engraved into a metal tag to be attached to your dogs collar or harness.</p> 
-            <p>When the tag is scanned on a mobile phone it will open a web page containing;</p>
-            <p>   - Your dogs name</p>
-            <p>   - Your phone number</p>
-            <p>   - Second phone number (Optional)</p>
+            <p>The Dog-Gone QR code can be engraved into a metal tag to be attached to your dogs collar or harness.</p> 
             <p></p>
-            <p>When the QR Tag is scanned, the following screen will be displayed on the finders device, They can then choose to call the number displayed or click the button to send an SMS with their GPS location.</p>
+            <p>When the QR Tag is scanned, the following screen will be displayed on the finders device.</p>
+            <p>They can then choose to call the number displayed or click the button to send an SMS with their GPS location.</p>
         </div>
         <div class="image">
             <img src="https://blimboy.github.io/Dog-Gone/Screenshot_20251104_181149_com_android_chrome_ChromeTabbedActivity.jpg" alt="Image on the right">
+        </div>
+        <div class="text">
+            <p>They can then choose to call the number displayed or click the button to send an SMS with their current GPS location.</p>
         </div>
     </div>
 
@@ -114,7 +114,7 @@
     <div class="container">
         <div class="text">
             <h2>Using the QR Code?</h2>
-            <p>It's simple, you can download the QR code image yourself and use it to create your tag, or you can order a tag from our Etsy store using the link provided on the QR page.</p>
+            <p>It's simple to download the QR code image yourself and use it to create your own tag, or you can order a tag from our Etsy store using the link provided on the QR page.</p>
             <p>The only details you'll be asked to enter are;</p>
             <p>Your dogs name and your contact number(s).</p>
         </div>
@@ -148,6 +148,7 @@
     </body>
 
 </html>
+
 
 
 
