--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     .text {
         flex: 1 1 50%;
-        text-align: centre; /* Justify the text */
+        text-align: justify; /* Justify the text */
         font-size: 20px; /* Main text size (adjust as needed) */
     }
 
@@ -130,6 +130,7 @@
 </body>
 
 </html>
+
 
 
 
