--- a/index.html
+++ b/index.html
@@ -105,20 +105,11 @@
             <img src="https://blimboy.github.io/Dog-Gone/Screenshot_20251104_181149_com_android_chrome_ChromeTabbedActivity.jpg" alt="Image on the right">
         </div>
         <div class="text">
-            <p>The finder can then choose to call you on the number(s) displayed or click the button to send you an SMS with their current GPS location.</p>
+            <p>The finder can then choose to call you on the number(s) displayed or they can click the button to send you an SMS including their current GPS location.</p>
+            <p>The only details you'll be asked to enter are, Your dogs name and your contact number(s).</p>
         </div>
     </div>
-
-    <!-- Third Row -->
-    <div class="container">
-        <div class="text">
-            <h2>Using the QR Code?</h2>
-            <p>You can order a tag from our Etsy store using the link provided on the QR page, or you're welcome to download the QR code image yourself and use it to create your own tag.</p>
-            <p>The only details you'll be asked to enter are;</p>
-            <p>Your dogs name and your contact number(s).</p>
-        </div>
-    </div>
-    
+   
     <!-- Button -->
     <div class="button-container">
         <a href="https://blimboy.github.io/Dog-Gone/qr.html">Create your Dog-Gone QR</a>
@@ -130,6 +121,7 @@
 </body>
 
 </html>
+
 
 
 
