--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
         <a href="https://blimboy.github.io/Dog-Gone/qr.html">Create your Dog-Gone QR</a>
     </div><br>
         
-    <div class="container">
-        <div class="text"> </p>All rights reserved Dog-Gone.co.uk</p>
-    </div>
+    </p>All rights reserved Dog-Gone.co.uk</p>
+    
 </body>
 
 </html>
+
 
 
 
