--- a/qr.html
+++ b/qr.html
@@ -85,7 +85,7 @@
         <button id="download-button" style="display: none;">Download QR Code</button>
     </div>
     <div class="qr-content" id="qr-content" style="display: none;">
-        <p>If you would like to order a QR Tag like the ones pictured below, please click the 'Copy QR Text' button then click the 'Order a Dog-Gone Tag' button, you can then paste it directly into the order form:</p>
+        <p>If you would like to order a QR Tag from our Etsy store, please click the 'Copy QR Text' button then click the 'Order a Dog-Gone Tag' button, you can then paste it directly into the personalisation space on the order page:</p>
         <p id="qr-text" class="invisible"></p>
         <button id="copy-button">Copy QR Text</button>
     </div>
@@ -95,7 +95,7 @@
             <img id="dog-gone-image" src="https://sheffieldengraving.com/cdn/shop/products/A8_5dc76f22-8820-43e1-911a-d26a59817d99.jpg?v=1667143730&width=360" alt="Dog-Gone Tag">
         </a>
     </div>
-    <button id="order-button" class="hidden">Order a Dog-Gone Tag</button>
+    <button id="order-button" class="hidden">Order your Dog-Gone Tag</button>
     <br><br>
     <div class="container hidden" id="donation-container">
         <div class="text">
@@ -177,7 +177,7 @@
             });
 
             orderButton.addEventListener('click', function() {
-                window.open('https://sheffieldengraving.com/search?q=QR+CODE&options%5Bprefix%5D=last', '_blank');
+                window.open('https://www.etsy.com/uk/shop/SuttonsCarVe', '_blank');
             });
         });
     </script>
