--- a/QR2.html
+++ b/QR2.html
@@ -153,7 +153,7 @@
                     const qr = new QRious({
                         value: qrContent,
                         size: qrSize,
-                        level: 'Q',
+                        level: 'H',
                         padding: 0,
                         foreground: 'black',
                         background: 'white'
