--- a/qr.html
+++ b/qr.html
@@ -144,6 +144,7 @@
                 const qr = new QRious({
                     value: qrContent,
                     size: qrSize,
+                    level: 'H',
                     padding: 0, // No padding around the QR code
                     foreground: 'black',
                     background: 'white'
