--- a/QR2.html
+++ b/QR2.html
@@ -178,7 +178,7 @@
                         color: "#ffffff"
                       }
                     });
-  
+                    qrStyled.append(document.getElementById("qr-image-container"));
                 } else if (qrSource === 'google') {
                     qrURL = `https://chart.googleapis.com/chart?cht=qr&chs=${qrSize}x${qrSize}&chl=${encodeURIComponent(qrContent)}`;
                     qrImage.src = qrURL;
