--- a/qr2.html
+++ b/qr2.html
@@ -152,15 +152,15 @@
                     width: 200,
                     height: 200,
                     data: qrContent,
-                    dotsOptions: {
+                    dotsOptions: { 
                         color: "#000000",
-                        type: "rounded"
+                        type: "dots"  // "square", "dots", "rounded"
                     },
                     backgroundOptions: {
                         color: "#ffffff"
                     },
                     cornersSquareOptions: {
-                        type: "extra-rounded"
+                        type: "dot"  // "square", "dot", "extra-rounded"
                     },
                     imageOptions: {
                         crossOrigin: "anonymous",
