--- a/qr2.html
+++ b/qr2.html
@@ -154,13 +154,13 @@
                     data: qrContent,
                     dotsOptions: { 
                         color: "#000000",
-                        type: "dots"  // "square", "dots", "rounded"
+                        type: "square"  // "square", "dots", "rounded"
                     },
                     backgroundOptions: {
                         color: "#ffffff"
                     },
                     cornersSquareOptions: {
-                        type: "dot"  // "square", "dot", "extra-rounded"
+                        type: "square"  // "square", "dot", "extra-rounded"
                     },
                     imageOptions: {
                         crossOrigin: "anonymous",
