--- a/qr2.html
+++ b/qr2.html
@@ -21,11 +21,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            text-align: justify;
             padding: 20px;
         }
         .centered-content {
-            text-align: center;
+            text-align: justify;
             margin: 10px 0;
         }
         button, input {
