--- a/qr2.html
+++ b/qr2.html
@@ -21,7 +21,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: justify;
+            text-align: centre;
             padding: 20px;
         }
         .centered-content {
