--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>What is Dog-Gone?</h2> 
             <p>It started when I was looking for an ID Tag for our dogs, I wanted one that would allow us to be contacted if they were found.</p> 
             <p>There are quite a few already on the market, but it seemed that they were all more interested in my details than my dogs!
-            They all wanted me to pay them a subscription or to sign up to their app.</p> 
+            They all wanted me to pay a subscription or to sign up to their app.</p> 
             <p>I just wanted someone to contact me if they find my dog!</p>
         </div>
     </div>
@@ -118,6 +118,7 @@
 </body>
 
 </html>
+
 
 
 
