--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="text">
             <p>The finder can then choose to call you on the number(s) displayed or they can click the button to send you an SMS including their current GPS location.</p>
-            <p>The only details you'll be asked to enter are, Your dogs name and your contact number(s).</p>
+            <p>The only details required are, Your dogs name and your contact number(s).</p>
         </div>
     </div>
    
@@ -118,6 +118,7 @@
 </body>
 
 </html>
+
 
 
 
