--- a/qr.html
+++ b/qr.html
@@ -144,7 +144,7 @@
                 const qr = new QRious({
                     value: qrContent,
                     size: qrSize,
-                    level: 'H',
+                    //level: 'H',
                     padding: 10, // No padding around the QR code
                     foreground: 'black',
                     background: 'white'
